     with and w/o hydrogens

Current Bugs to Fix

   * superposition system fails with degenerate sets (planer systems, etc).
     sometimes it just fails period

Changes up to 0.84

   * PyMOL now preserves stereo field on MOL-files to better enable
     shuttling of 2D structures through PyMOL...

   * fixed bug with dumping of dot surfaces...

Changes up to 0.83

   * various tweaks to the semistatic minimal dependencies build...

   * fixed bug in startup file reading

   * first inclusion of cex file support

Changes up to 0.82

   * WARNING: default behavior of isomesh and isosurf changed!  By default, they
     will now always load the mesh into state 1.  If you need the previous behavior,
     then set the state argument to zero.

Changes up to 0.82

   * modified "cmd.system" to take an argument for asynchronous execution

   * flag command no longer indicates atoms by default -- set "auto_indicate_flags"

   * cross-eye side-by-side stereo support

   * fixed bug in valency display code

   * fixed major bug in "create"

   * raytracing bugfix for bond with zero length

   * complicated workaround for mouse atom selections with Radeon 8500 and WinXP
     PyMOL may now be somewhat resistant to broken OpenGL ReadPixels implementations 

   * improved water handling for "non-canonical" situations (i.e. real life muck)

   * moved configuration files to a subdirectory "setup"

   * mpng now can support a range in order to enable coarse-grained parallelism
     (distributed movie rendering)

   * "within" operator added to selection language

   * visible selection operator no longer hits disabled objects

   * origin, zoom, and orient now take "state" as optional argument with special
     handling for 0 (all states) and -1 (current state)

   * eigensolve output now considered blather

   * important bug-fix on rotate and translate commands

   * "present" operator in selection language and tests for "state" operator

Changes up to 0.81
